--- a/app/src/main/res/layout/activity_qrgenerator.xml
+++ b/app/src/main/res/layout/activity_qrgenerator.xml
@@ -33,6 +33,7 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="78dp"
+            android:scrollbars="vertical"
             android:text="@string/event_Description" />
 
     </RelativeLayout>
