--- a/app/src/main/res/layout/fragment_accepted_event_details.xml
+++ b/app/src/main/res/layout/fragment_accepted_event_details.xml
@@ -21,59 +21,50 @@
         <TextView
             android:id="@+id/acceptedEventappointmentIsFromText"
             android:layout_width="92dp"
-            android:layout_height="28dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="28dp"
             android:text="@string/appointmentIsFrom"
             android:textSize="16dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.07"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.061" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/acceptedEventDetailsOrganisatorText"
             android:layout_width="180dp"
-            android:layout_height="26dp"
-            android:layout_marginBottom="8dp"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="188dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="29dp"
             android:text=""
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:textSize="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/acceptedEventappointmentIsFromText"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.06" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/acceptedEventphNumberText"
             android:layout_width="228dp"
-            android:layout_height="32dp"
-            android:layout_marginBottom="8dp"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="15dp"
             android:text=""
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.135"
+            app:layout_constraintHorizontal_bias="0.057"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.132" />
+            app:layout_constraintTop_toBottomOf="@+id/acceptedEventDetailsOrganisatorText" />
 
         <Button
             android:id="@+id/acceptedEventDetailsButtonShowQR"
             android:layout_width="345dp"
-            android:layout_height="50dp"
+            android:layout_height="0dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="124dp"
+            android:layout_marginTop="40dp"
             android:background="@color/zentea_darkgreen"
             android:text="@string/savingSuccessful_qrcode"
             android:textColor="@android:color/background_light"
@@ -86,7 +77,7 @@
         <Button
             android:id="@+id/acceptedEventDetailsButtonRefuseAppointment"
             android:layout_width="345dp"
-            android:layout_height="48dp"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
@@ -101,22 +92,24 @@
             app:layout_constraintHorizontal_bias="0.521"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/acceptedEventDetailsButtonShowQR"
-            app:layout_constraintVertical_bias="0.807" />
+            app:layout_constraintVertical_bias="0.095" />
 
         <ScrollView
             android:id="@+id/scrollView2"
-            android:layout_width="346dp"
-            android:layout_height="214dp"
-            android:layout_marginBottom="8dp"
+            android:layout_width="0dp"
+            android:layout_height="203dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="20dp"
             android:background="@drawable/rect_listview_frame"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:paddingBottom="10dp"
+            android:paddingEnd="10dp"
+            android:paddingStart="10dp"
+            android:paddingTop="10dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.323">
+            app:layout_constraintTop_toBottomOf="@+id/acceptedEventphNumberText">
 
             <LinearLayout
                 android:layout_width="match_parent"
