--- a/app/src/main/res/layout/fragment_accepted_event_details.xml
+++ b/app/src/main/res/layout/fragment_accepted_event_details.xml
@@ -47,7 +47,7 @@
         <TextView
             android:id="@+id/acceptedEventphNumberText"
             android:layout_width="228dp"
-            android:layout_height="wrap_content"
+            android:layout_height="13dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="10dp"
             android:layout_marginTop="15dp"
