--- a/app/src/main/res/layout/fragment_saved_event_details.xml
+++ b/app/src/main/res/layout/fragment_saved_event_details.xml
@@ -20,60 +20,55 @@
 
         <TextView
             android:id="@+id/savedEventappointmentIsFromText"
-            android:layout_width="wrap_content"
-            android:layout_height="25dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+
+            android:layout_width="92dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="20dp"
             android:text="@string/appointmentIsFrom"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.07"
+            android:textSize="16dp"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.061" />
+            app:layout_constraintTop_toTopOf="parent" />
 
 
         <TextView
             android:id="@+id/savedEventDetailsOrganisatorText"
-            android:layout_width="208dp"
-            android:layout_height="27dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="188dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="20dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="21dp"
             android:text=""
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:textSize="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/savedEventappointmentIsFromText"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.06" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/savedEventphNumberText"
-            android:layout_width="165dp"
-            android:layout_height="26dp"
-            android:layout_marginBottom="8dp"
+            android:layout_width="228dp"
+            android:layout_height="12dp"
+            android:layout_marginBottom="10dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
             android:text=""
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:textSize="12sp"
+            app:layout_constraintBottom_toTopOf="@+id/scrollView2"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.103"
+            app:layout_constraintHorizontal_bias="0.057"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.125" />
+            app:layout_constraintTop_toBottomOf="@+id/savedEventDetailsOrganisatorText" />
 
         <Button
             android:id="@+id/savedEventDetailsButtonAcceptAppointment"
-            android:layout_width="346dp"
-            android:layout_height="44dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="124dp"
+            android:layout_marginTop="8dp"
             android:background="@color/zentea_darkgreen"
             android:drawableEnd="@drawable/ic_mydate_approved_white"
             android:text="@string/acceptAppointment"
@@ -81,12 +76,12 @@
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
+            app:layout_constraintTop_toBottomOf="@+id/savedEventDetailsButtonShowQr" />
 
         <Button
             android:id="@+id/savedEventDetailsButtonRefuseAppointment"
-            android:layout_width="346dp"
-            android:layout_height="45dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
@@ -98,40 +93,42 @@
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.6"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/savedEventDetailsButtonAcceptAppointment"
             app:layout_constraintVertical_bias="0.0" />
 
         <Button
             android:id="@+id/savedEventDetailsButtonShowQr"
-            android:layout_width="346dp"
-            android:layout_height="47dp"
-            android:layout_marginBottom="116dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="20dp"
             android:background="@color/zentea_darkgreen"
             android:text="@string/savingSuccessful_qrcode"
             android:textColor="@android:color/background_light"
             android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
 
         <ScrollView
             android:id="@+id/scrollView2"
-            android:layout_width="325dp"
-            android:layout_height="217dp"
-            android:layout_marginBottom="5dp"
+            android:layout_width="0dp"
+            android:layout_height="180dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="10dp"
             android:background="@drawable/rect_listview_frame"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:paddingBottom="10dp"
+            android:paddingEnd="10dp"
+            android:paddingStart="10dp"
+            android:paddingTop="10dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.511"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.326">
+            app:layout_constraintTop_toBottomOf="@+id/savedEventphNumberText">
 
             <LinearLayout
                 android:layout_width="match_parent"
