--- a/app/src/main/res/layout/fragment_accepted_event_details.xml
+++ b/app/src/main/res/layout/fragment_accepted_event_details.xml
@@ -34,20 +34,17 @@
             android:id="@+id/acceptedEventDetailsOrganisatorText"
             android:layout_width="180dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="188dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="29dp"
             android:text=""
             android:textSize="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/acceptedEventappointmentIsFromText"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/acceptedEventphNumberText"
             android:layout_width="228dp"
-            android:layout_height="13dp"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="10dp"
             android:layout_marginTop="15dp"
@@ -61,14 +58,14 @@
         <Button
             android:id="@+id/acceptedEventDetailsButtonShowQR"
             android:layout_width="345dp"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="40dp"
             android:background="@color/zentea_darkgreen"
             android:text="@string/savingSuccessful_qrcode"
             android:textColor="@android:color/background_light"
-            android:textSize="18sp"
+            android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.521"
             app:layout_constraintStart_toStartOf="parent"
@@ -84,9 +81,11 @@
             android:layout_marginTop="8dp"
             android:background="@color/zentea_darkgreen"
             android:drawableEnd="@drawable/ic_mydate_rejected_white"
+            android:paddingStart="30dp"
             android:text="@string/refuseAppointment"
+            android:textAlignment="center"
             android:textColor="@android:color/background_light"
-            android:textSize="18sp"
+            android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.521"
