--- a/app/src/main/res/layout/fragment_saved_event_details.xml
+++ b/app/src/main/res/layout/fragment_saved_event_details.xml
@@ -49,7 +49,7 @@
         <TextView
             android:id="@+id/savedEventphNumberText"
             android:layout_width="228dp"
-            android:layout_height="12dp"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="10dp"
@@ -71,9 +71,10 @@
             android:layout_marginTop="8dp"
             android:background="@color/zentea_darkgreen"
             android:drawableEnd="@drawable/ic_mydate_approved_white"
+            android:paddingLeft="30dp"
             android:text="@string/acceptAppointment"
             android:textColor="@android:color/background_light"
-            android:textSize="18sp"
+            android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/savedEventDetailsButtonShowQr" />
@@ -88,9 +89,10 @@
             android:layout_marginTop="8dp"
             android:background="@color/zentea_darkgreen"
             android:drawableEnd="@drawable/ic_mydate_rejected_white"
+            android:paddingLeft="30dp"
             android:text="@string/refuseAppointment"
             android:textColor="@android:color/background_light"
-            android:textSize="18sp"
+            android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.6"
@@ -108,7 +110,7 @@
             android:background="@color/zentea_darkgreen"
             android:text="@string/savingSuccessful_qrcode"
             android:textColor="@android:color/background_light"
-            android:textSize="18sp"
+            android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
